# min_Kano

./: .gitignore  Doc.md  ReadMe.md  main.py  pyproject.toml
artifacts/: README.md
configs/embed/: mine_bm25.yaml  mine_dense.yaml  prepare.yaml  score_teacher.yaml  train.yaml  train_v2_bm25.yaml  train_v3_dense.yaml  train_v4_distillation.yaml
data/: VERSION_ID_AND_PASSAGE_ANALYSIS.md  inspects.py
data/inspection/: README.md  boilerplate_overlap_warnings.jsonl  citation_multi_version_candidates.jsonl  exact_passage_duplicate_groups.jsonl  metadata_multi_version_candidates.jsonl  repeated_version_id_samples.jsonl  template_similar_passage_pairs.jsonl  text_similarity_candidates.jsonl
data/retrieval/: report.json
data/retrieval/audit/: records.jsonl
docs/: EMBED_CLUSTER_TRAINING.md  EMBED_DATA.md  REPOSITORY_STRUCTURE.md
notebooks/embed/: README.md
reports/: README.md
reports/data/: README.md
research/embed/: datasets.md  distillation.md  models.md  training_objectives.md
scripts/data/: inspect_open_australian_legal_qa_old.py  inspects.py  prepare_embed_dataset.py
scripts/evaluate/: README.md  compare_embed_runs.py  evaluate_embed_zero_shot.py
scripts/mining/: README.md  mine_bm25_negatives.py  mine_dense_negatives.py  score_teacher_candidates.py
scripts/slurm/: train_all_embed.slurm
scripts/train/: README.md  train_embed.py  train_embed_distillation.py
src/mini_kanon3/: __init__.py  config.py  tracking.py
src/mini_kanon3.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/e2e/: README.md
tests/integration/: README.md
(+51 files in other folders)
