[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "mini-kanon3"
version = "0.1.0"
description = "Multi-capability legal language-model engineering project"
requires-python = ">=3.9"
dependencies = ["PyYAML>=6.0"]

[project.optional-dependencies]
data = ["datasets>=3.0"]
test = ["pytest>=8.0"]
eval = ["sentence-transformers>=3.4", "torch>=2.4", "numpy>=1.26"]
train = ["sentence-transformers>=3.4", "torch>=2.4", "numpy>=1.26", "transformers>=4.48"]
tracking = ["wandb>=0.18"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
